--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ celerybeat-schedule
 # virtualenv
 .venv
 venv/
+venv_main/
 ENV/
 
 # Spyder project settings
@@ -102,3 +103,9 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# Dolphin
+.directory
+
+# project related stuff
+speech_cache/*
